<resources>
    <string name="app_name">Omok</string>
    <string name="action_settings">Settings</string>
    <string name="x_label">X: </string>
    <string name="y_label">Y: </string>

    <!-- Main Menu strings -->
    <string name="easy_mode">Random</string>
    <string name="hard_mode">Smart</string>
    <string name="human_mode">Human</string>
    <string name="comp_mode">Computer</string>
    <string name="network_mode">Network</string>
    <string name="menuTitle">OMOK</string>

    <!-- Menu option strings-->
    <string name="boardCustom">Customize</string>
    <!-- stones -->
    <string name="theme">Select theme</string>
    <string name="theme1">Theme 1</string>
    <string name="theme2">Theme 2</string>
    <string name="theme3">Theme 3</string>

    <!-- music -->
    <string name="gameMusic">Background music</string>
    <string name="on">On</string>
    <string name="off">Off</string>

    <!-- Extra -->
    <string name="extraFeature">Voice Instructions</string>
    <string name="quit">Exit Game</string>
</resources>
